Fixes menu display on mobile

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -126,6 +126,14 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	height: 4.5rem;
 	justify-content: space-evenly;
 }
+@media only screen and (max-width: 400px) {
+	#menu-primary {
+		justify-content: baseline;
+		height: auto;
+
+	}
+  }
+
 .nav-link {
     text-overflow: ellipsis;
 	overflow: hidden;
